Closed
Bug 213852
Opened 22 years ago
Closed 22 years ago
Address book crashes when validating a card modification
Categories
(Thunderbird :: Address Book, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: matthieusadouni, Assigned: mscott)
References
Details
(Whiteboard: 0.1blocker)
Attachments
(1 file)
|
1.12 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Opera/7.11 (Windows NT 5.1; U) [en]
Build Identifier: Mozilla Thunderbird 0.1a (20030708)
When you try to modify the last card in alphabetical order in the address book,
it causes a memory error and crash Thunderbird.
Reproducible: Always
Steps to Reproduce:
1.create a new card
2.change the field 'display name' so that it happens to be the last one in
alphabetical order
3.validate
4. alternatively you can just try to modifiy anything in the last card in
alphabetical order, it will crash upon validation
Actual Results:
the program causes a memory error on windows xp (I couldn't try on another
system)
Expected Results:
it should just validate the new information, which is at the moment not saved
Workaround : for the moment I created a card just named 'z', with a display name
of 'z', which caused the program to crash but now allows me to use it normally
| Assignee | ||
Comment 1•22 years ago
|
||
this is a thunderbird 0.1 blocker.
The good news is that I think I have a fix for us to try out.
Whiteboard: 0.1blocker
| Assignee | ||
Comment 2•22 years ago
|
||
It definetly removes a bunch of nasty assertions when modifying an address book
card.
| Assignee | ||
Comment 3•22 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 4•22 years ago
|
||
this just got checked in for *real*
Comment 5•22 years ago
|
||
*** Bug 212088 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•