Bug #213852 --> fix a crash in the address book caused from modifying an existing card and re-inserting it into the view. We weren't adjusting the row count properly when removing the card.

r/sr=bienvenu